<resources>
    <string name="app_name">Movies Movies</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">Can not connect, check your internet connection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="runtime">%s min</string>

    <string name="all">All</string>
    <string name="genres">Genres</string>

    <!--MOVIES GENRES-->
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="biography">Biography</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="film_noir">Film-noir</string>
    <string name="game_show">Game-show</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="musical">Musical</string>
    <string name="mystery">Mystery</string>
    <string name="news">News</string>
    <string name="reality_tv">Reality-tv</string>
    <string name="romance">Romance</string>
    <string name="sci_fi">Sci-Fi</string>
    <string name="sport">Sport</string>
    <string name="talk_show">Talk-Show</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>

    <!--ORDER CRITERIAS-->
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="seeds">Seeds</string>
    <string name="peers">Peers</string>
    <string name="year">Year</string>
    <string name="rating">Top Rated</string>
    <string name="likes">Likes</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="title_moviegenre_list">MovieGenres</string>
    <string name="title_moviegenre_detail">MovieGenre Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="synopsis">Synopsis :</string>
    <string name="imdb">See on IMDB</string>

    <string name="imdb_link">http://www.imdb.com/title/%s/</string>
    <string name="imdb_actor">http://www.imdb.com/name/nm%s/</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast :</string>
    <string name="comments">Comments</string>
    <string name="character">Character : %s</string>
    <string name="movie_name">Movie name :</string>
    <string name="movie_year">Year :</string>
    <string name="movie_rating">Rating :</string>
    <string name="movie_genre">Genre :</string>
    <string name="movie_runtime">Runtime :</string>
    <string name="info">Info :</string>
    <string name="similar_movies">Similar movies :</string>
    <string name="movie_insert_database">Movie added to your favorites</string>
    <string name="movie_remove_database">Movie removed from your favorites</string>
    <string name="my_favorites">My Favorites</string>
    <string name="mail_to">mailto:bilel.tabakh@gmail.com?subject=%s</string>
    <string name="empty_favorites_text">You have not added any favorites yet</string>
    <string name="contact">Contact</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="favorites">Favorites</string>
    <string name="quality_search">Quality :</string>
    <string name="genre_search">Genre :</string>
    <string name="rating_search">Rating :</string>
    <string name="order_by_search">Order By :</string>

</resources>
