<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom|end">

    <LinearLayout
        android:id="@+id/favoritesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_gravity="end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:background="@drawable/floating_menu_item_background"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/favoritesFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:rippleColor="@color/transparentWhite"
            app:srcCompat="@drawable/ic_star"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/advancedSearchLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_gravity="end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/advanced_search"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:background="@drawable/floating_menu_item_background"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/advancedSearchFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:rippleColor="@color/transparentWhite"
            app:srcCompat="@drawable/ic_search"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contactLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_gravity="end"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:background="@drawable/floating_menu_item_background"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/contactFloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:rippleColor="@color/transparentWhite"
            app:srcCompat="@drawable/ic_mail"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/mainFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_gravity="end"
        app:fabSize="normal"
        app:rippleColor="@color/transparentWhite"
        app:srcCompat="@drawable/ic_plus"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

</LinearLayout>