<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/providerDetailCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moviesmovies.com.moviesmovies.activities.MovieDetailsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@+id/appBarLayout"
        app:elevation="0dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/Toolbar.TitleTextExpanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

            <ImageView
                android:id="@+id/bannerImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/adventure"/>

                <ImageButton
                    android:id="@+id/playTrailerImageButton"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/runtime_background"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:src="@android:drawable/ic_media_play" />

            <ImageView
                android:id="@+id/coverImageView"
                android:layout_width="90dp"
                android:layout_height="135dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:scaleType="fitXY"
                android:layout_marginTop="?attr/actionBarSize"
                android:src="@drawable/cover_placeholder" />

            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:visibility="gone"/>
            
            <LinearLayout
                android:id="@+id/movieDetailsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:padding="8dp"
                    android:layout_margin="8dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/screenshotsRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <include layout="@layout/content_movie_info" />

                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/synopsis"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/sypnosisTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/castTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/cast"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="8dp"
                    android:id="@+id/castRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="GridLayoutManager"
                    app:spanCount="@integer/grid_columns"/>

                <ProgressBar
                    android:id="@+id/similarMoviesProgressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/similarTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:text="@string/similar_movies"
                    android:visibility="gone"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/similarMoviesRecyclerView"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:clickable="true"
        app:rippleColor="@color/transparentWhite"
        app:fabSize="normal"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_star_border" />

</android.support.design.widget.CoordinatorLayout>